--- a/notebooks/wyk_01_data_cleaning_with_pandas_and_jupyter_notebooks.ipynb
+++ b/notebooks/wyk_01_data_cleaning_with_pandas_and_jupyter_notebooks.ipynb
@@ -35,9 +35,9 @@
    "source": [
     "## Purpose\n",
     "\n",
-    "Since its inception in the 1960s, the International Ocean Discovery Program (IODP) and its predecessors have recovered sediment cores from ocean basins around the world. The cores provide an extensive amount of information about microorganism fossils and lithologies spanning millions of years. Current challenges to using the scientific ocean drilling (SOD) data include: datasets are stored in different databases with different formats, databases have limited search capabilities, and no one database has all the SOD data. \n",
+    "Since their inception in the 1960s, the International Ocean Discovery Program (IODP) and predecessors have recovered sediment cores from ocean basins around the world. The cores provide an extensive amount of information about microfossils and lithologies spanning millions of years. Current challenges to using the scientific ocean drilling (SOD) data include: datasets are stored in different databases with different formats, databases have limited search capabilities, and no one database has all the SOD data. \n",
     "\n",
-    "The [extending Ocean Drilling Pursuits (eODP)](https://eodp.github.io/) project aims to standardized SOD data from several sources into one standardize database structure. The standardized data is then added to the Paleobiology Database (paleobiodb.org) and Macrostrat (macrostrat.org) to make the data easily accessible to researchers. This notebook demonstrates how the eODP team uses Jupyter notebooks to clean and standardize 50+ years of SOD data.  This notebook is developed for Python 3.8+ and Jupyter Lab.\n",
+    "The [extending Ocean Drilling Pursuits (eODP)](https://eodp.github.io/) project aims to harmonize SOD data from several sources into one standardized database structure. The standardized data is then added to the Paleobiology Database (paleobiodb.org) and Macrostrat (macrostrat.org) to make the data easily accessible to researchers. This notebook demonstrates how the eODP team uses Jupyter notebooks to clean and standardize 50+ years of SOD data.  This notebook is developed for Python 3.8+ and Jupyter Lab.\n",
     "\n",
     "## Technical contributions\n",
     "\n",
@@ -51,7 +51,7 @@
     "\n",
     "## Results\n",
     "\n",
-    "By making the raw data, processed data, and data cleaning code available, we hope to give ocean core drilling researchers the ability review our data cleaning process and customize the data cleaning steps if so desired. We also hope researchers can apply ideas and tips from our data cleaning process to their own datasets. \n",
+    "By making the raw data, processed data, and data cleaning code available, we hope to give ocean core drilling researchers the ability review our data cleaning process and customize data cleaning steps if so desired. We also hope researchers can adapt the processes and code from our data cleaning process to their own datasets. \n",
     "\n",
     "## Funding\n",
     "\n",
